crates/reinhardt-pages/tests/ui/style/fail/qualified_style_macro.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: CardStyles = reinhardt_pages::style! { .card { color: red; } };

fn main() {}
