crates/reinhardt-pages/tests/ui/style/fail/qualified_style_macro.stderr
error: style_def requires a direct bare style! initializer
 --> tests/ui/style/fail/qualified_style_macro.rs:4:29
  |
4 | static STYLES: CardStyles = reinhardt_pages::style! { .card { color: red; } };
  |                             ^^^^^^^^^^^^^^^^^^^^^^
